--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,18 @@
   display: table;
   clear: both;
 }
+/*======================================================== */
+/* global classes */
+.container {
+    margin: 0 auto;
+    width: 1060px;
+}
 
 /* ======================================================== */
 /* Fonts definitions */
+
+
+
 /* ======================================================== */
 
 /* ======================================================== */
@@ -36,6 +45,92 @@ html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
+    font-family: 'Raleway', sans-serif;
 }
 
+.page-header {
+    background: #000;
+    height: 40px;
+}
 
+.page-logo {
+    float:left;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+    text-decoration: none;
+    line-height: 40px;
+    display: inline-block;
+    font-weight: 600;
+}
+
+.page-logo span {
+    color: rgba(0, 200, 170, 1);
+    font-weight: 600;
+}
+
+/*glowna nawigacja*/
+.page-nav {
+    float:right;
+}
+
+.page-nav ul {
+    float: right;
+}
+
+.page-nav li {
+    display: inline-block;
+    position: relative;
+}
+
+.page-nav li a {
+    font-weight: 600;
+    display: block;
+    padding: 0 20px;
+    line-height: 40px;
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+.page-nav-sublist {
+    position: absolute;
+    top: 45px;
+    left: -10px;
+    background: #000;
+    width: 150px;
+
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s opacity, 0.5s top;
+
+}
+
+.page-nav-sublist:before {
+    content: '';
+    width: 0;
+    height: 0;
+    /*robimy czarny dziubek:*/
+    border: 10px solid transparent;
+    border-bottom-color: #000;
+    position: absolute;
+    margin-left: -10px;
+    left: 50%;
+    top: -20px;
+}
+
+.page-nav-sublist li {
+    text-align: left;
+    display: block;
+
+}
+
+.page-nav-sublist li a {
+    text-transform: none;
+    font-weight: normal;
+    line-height: 40px;
+}
+
+.page.nav li:hover .page-nav-sublist {
+    visibility: visible;
+    opacity: 1;
+}
